# SAEGD-Net

./: Makefile  README.md  pyproject.toml
configs/: default.yaml
docs/: DATA_FORMAT.md
saegd_net_project/: LICENSE  README.md  requirements.txt
saegd_net_project/configs/: inference.yaml  tiny_smoke.yaml
saegd_net_project/docs/: MODEL_DETAILS.md  TRAINING_PROTOCOL.md  TROUBLESHOOTING.md
saegd_net_project/saegdnet/data/: events.py
saegd_net_project/saegdnet/diffusion/: gaussian.py
saegd_net_project/saegdnet/evaluation/: event_support.py
saegd_net_project/saegdnet/models/: encoders.py  saegd.py
saegd_net_project/saegdnet/training/: engine.py  losses.py
saegd_net_project/scripts/: build_pairs.py  evaluate.py  make_synthetic_sample.py  preprocess_events.py  train.py  visualize_events.py
saegd_net_project/tests/: test_event_voxel.py
saegdnet/: __init__.py  config.py
saegdnet/data/: dataset.py  masks.py
saegdnet/diffusion/: schedules.py
saegdnet/evaluation/: metrics.py
saegdnet/models/: attention.py  blocks.py
saegdnet/utils/: checkpoint.py  io.py  seed.py
scripts/: infer.py
tests/: test_model_forward.py  test_smoke_imports.py
