[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "saegdnet"
version = "0.1.0"
description = "Saturation-Aware Event-Guided Diffusion Network for severe UHSC overexposure reconstruction"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "SAEGD-Net Authors"}]
license = {text = "MIT"}

[tool.setuptools.packages.find]
include = ["saegdnet*"]
